// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`<Button />\` renders correctly 1`] = `
<div>
  <button
    class="sc-AxjAm iGplDk"
  />
</div>
`;

exports[`\`<ButtonDanger />\` renders correctly 1`] = `
<div>
  <button
    class="sc-AxjAm sc-AxiKw cgflug"
  />
</div>
`;

exports[`\`<ButtonPrimary />\` renders correctly 1`] = `
<div>
  <button
    class="sc-AxjAm sc-AxirZ CUWHb"
  />
</div>
`;
